--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "vite": "4.1.1"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.0",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
     "command-line-args": "^5.2.1",
+    "jest": "^29.5.0",
     "tosource": "^2.0.0-alpha.3",
+    "ts-jest": "^29.0.5",
     "typescript": "^5.0.2"
   },
   "prettier": {
