--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,8 @@
     "moduleResolution": "Node",
     "outDir": "build",
     "strict": true,
-    "target": "ES2022"
+    "target": "ES2022",
+    "types": ["jest", "node"]
   },
   "include": ["./src/**/*.ts"]
 }
