--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "apocrypha",
   "version": "0.0.1",
   "description": "an engine for building websites with markdoc",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "files": [
