--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "@nkohari/apocrypha",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "an engine for building websites with markdoc",
   "license": "MIT",
-  "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "files": [
-    "src/catalog.d.ts"
+    "./src/catalog.d.ts"
   ],
   "dependencies": {
     "@markdoc/markdoc": "^0.2.2",
     "chokidar": "^3.5.3",
     "fast-glob": "^3.2.12",
     "js-yaml": "^4.1.0",
+    "tosource": "^2.0.0-alpha.3",
     "vite": "4.1.1"
   },
   "devDependencies": {
@@ -21,9 +22,8 @@
     "@types/node": "^18.15.3",
     "@types/react": "^18.0.28",
     "command-line-args": "^5.2.1",
-    "esbuild": "^0.17.12",
+    "esbuild": "^0.16.17",
     "jest": "^29.5.0",
-    "tosource": "^2.0.0-alpha.3",
     "ts-jest": "^29.0.5",
     "typescript": "^5.0.2"
   },
