--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nkohari/apocrypha",
-  "version": "0.1.1",
-  "description": "an engine for building websites with markdoc",
+  "version": "0.2.0",
+  "description": "an engine for building websites with vite and markdoc",
   "license": "MIT",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
@@ -11,7 +11,7 @@
     "fast-glob": "^3.2.12",
     "js-yaml": "^4.1.0",
     "tosource": "^2.0.0-alpha.3",
-    "vite": "4.1.1"
+    "vite": "^5.2.11"
   },
   "devDependencies": {
     "@types/jest": "^29.5.0",
