--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "@nkohari/apocrypha",
+  "name": "@apocrypha/core",
   "version": "0.2.1",
   "description": "an engine for building websites with vite and markdoc",
   "license": "MIT",
+  "author": "Nate Kohari <nkohari@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/nkohari/apocrypha.git"
+  },
+  "homepage": "https://github.com/nkohari/apocrypha#readme",
+  "bugs": {
+    "url": "https://github.com/nkohari/apocrypha/issues"
+  },
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "dependencies": {
     "@markdoc/markdoc": "^0.4.0",
     "chokidar": "^3.5.3",
