--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@apocrypha/core",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "an engine for building websites with vite and markdoc",
   "license": "MIT",
   "author": "Nate Kohari <nkohari@gmail.com>",
@@ -17,28 +17,23 @@
   "types": "./dist/index.d.ts",
   "dependencies": {
     "@markdoc/markdoc": "^0.4.0",
-    "chokidar": "^3.5.3",
+    "chokidar": "^5.0.0",
     "fast-glob": "^3.2.12",
     "js-yaml": "^4.1.0",
     "tosource": "^2.0.0-alpha.3",
-    "vite": "^5.2.11"
+    "vite": "^7.3.1"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.11",
     "@types/jest": "^29.5.0",
     "@types/js-yaml": "^4.0.5",
-    "@types/node": "^18.15.3",
+    "@types/node": "^22.19.7",
     "@types/react": "^18.0.28",
     "command-line-args": "^5.2.1",
     "esbuild": "^0.16.17",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
     "typescript": "^5.0.2"
-  },
-  "prettier": {
-    "singleQuote": true,
-    "trailingComma": "all",
-    "bracketSpacing": false,
-    "arrowParens": "always"
   },
   "scripts": {
     "build": "npm run build:library && npm run build:types",
