--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "module": "ES2022",
     "moduleResolution": "Bundler",
     "outDir": "build",
+    "skipLibCheck": true,
     "strict": true,
     "target": "ES2022",
     "types": ["jest", "node"]
