--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "@types/node": "^22.19.7",
     "@types/react": "^18.0.28",
     "command-line-args": "^5.2.1",
+    "dedent": "^1.7.1",
     "esbuild": "^0.16.17",
     "jest": "^29.5.0",
     "ts-jest": "^29.0.5",
-    "typescript": "^5.0.2"
+    "typescript": "^5.0.2",
+    "vitest": "^4.0.18"
   },
   "scripts": {
     "build": "npm run build:library && npm run build:types",
@@ -41,7 +43,9 @@
     "build:types": "tsc --emitDeclarationOnly --outDir dist",
     "dev": "node build.js --watch",
     "prepack": "npm run build",
-    "test": "npx jest",
-    "zen": "npx jest --watch"
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "zen": "vitest"
   }
 }
